code/force-app/main/default/objects/Client_Tags__c/Client_Tags__c.object-meta.xml
<CustomObject>
    <description>for testing (for now)</description>
    <label>Client Tags</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Client Tag No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>