code/force-app/main/default/objects/Client_Tags__c/fields/Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Id__c</fullName>
    <description>Account or Contact Id</description>
    <label>Entity Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>