code/force-app/main/default/objects/Client_Tags__c/fields/Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Processed</label>
    <type>Checkbox</type>
</CustomField>