code/force-app/main/default/objects/Client_Tags__c/fields/Tag_Category__c.field-meta.xml
<CustomField>
    <fullName>Tag_Category__c</fullName>
    <label>Tag Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>